    values are passed as bytes and not unicode
    if the "Easysoft" unix drivers are detected. 
    This is the same behavior as occurs with
    FreeTDS.  Easysoft appears to segfault
    if Python unicodes are passed under
    certain circumstances.

- oracle
  - Added ORA-00028 to disconnect codes, use 
    cx_oracle _Error.code to get at the code,
    [ticket:2200].  Also in 0.6.9.

- examples
  - Repaired the examples/versioning test runner
    to not rely upon SQLAlchemy test libs,
    nosetests must be run from within
    examples/versioning to get around setup.cfg
    breaking it.

  - Tweak to examples/versioning to pick the
    correct foreign key in a multi-level
    inheritance situation.

  - Fixed the attribute shard example to check
    for bind param callable correctly in 0.7 
    style.

0.7.1
=====
- general
  - Added a workaround for Python bug 7511 where
    failure of C extension build does not 
    raise an appropriate exception on Windows 64
    bit + VC express [ticket:2184]

- orm
  - "delete-orphan" cascade is now allowed on
    self-referential relationships - this since
    SQLA 0.7 no longer enforces "parent with no 
    child" at the ORM level; this check is left
    up to foreign key nullability.
    Related to [ticket:1912]

  - Repaired new "mutable" extension to propagate
    events to subclasses correctly; don't 
    create multiple event listeners for 
    subclasses either.  [ticket:2180]

  - Modify the text of the message which occurs
    when the "identity" key isn't detected on 
    flush, to include the common cause that
    the Column isn't set up to detect
    auto-increment correctly; [ticket:2170].
    Also in 0.6.8.

  - Fixed bug where transaction-level "deleted"
    collection wouldn't be cleared of expunged
    states, raising an error if they later
    became transient [ticket:2182]. 
    Also in 0.6.8.

- sql
  - Fixed bug whereby metadata.reflect(bind)
    would close a Connection passed as a